Changing the idea, we want the _sinks_ to be our parallel workers (not the flow ops!)